# chutes-autopilot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  PROMPT_build.md  README.md  docker-compose.yaml  ralphie.sh
.specify/memory/: constitution.md
logs/: baseline.md
research/: STACK_SNAPSHOT.md
specs/002-autopilot-mvp/: spec.md
specs/003-utilization-and-ranking/: spec.md
specs/004-user-model-preference-list/: spec.md
src/: lib.rs  main.rs
testdata/: utilization_fixture.json
