[package]
name = "chutes-autopilot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = "0.7"
futures-util = "0.3"
http = "1"
ipnet = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
